prep for deno deploy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Mostafa Elshamy">
     <meta name="description" content="o2 co2 exchange">
     <link rel="stylesheet" href="https://busy-dog-44.deno.dev/melhosseiny/aurora/main/src/typography/type.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="/base.css">
+    <link rel="stylesheet" href="/css/base.css">
   </head>
   <body>
     <main id="root"></main>
